# ask-vie

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
src/: constants.py  main.py
src/IOHandler/: file_reader.py  find_files.py
tests/IOHandler/: test_file_reader.py  test_find_files.py
