[tool.poetry]
name = "ask-vie"
version = "0.1.0"
description = "Rag which enables to ask question as a VIE for contract informations."
authors = ["Chloe-adnet-eng <chloe.adnet@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.5.1"
pypdf = "^6.6.2"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dotenv]
ignore = "false"
location = ".env.dev"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env.dev"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
